applications/mealie/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
