applications/mealie/manifests/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-tailscale
  namespace: mealie
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - mealie
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
